# science-assistant

./: .gitignore  README.md  configs.py  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  configs.py  logger.py  requirements.txt
app/api/: agent_workflow.py  arxiv_tools.py
app/core/: arxiv_mcp.py  arxiv_tools.py  graph.py  graph_builder.py  graph_runner.py  run.py
app/schemas/: arxiv_tools.py  state.py
app/utils/: arxiv_mcp.py  get_prompt.py
backend/: pyproject.toml
backend/mcp_servers/arxiv/: helpers.py  server.py
backend/mcp_servers/books/: schema.py
backend/workflow/: graph.py  run.py
checkpoints/: checkpoints.sqlite
log/: logger.py
mcp_servers/: start.py
mcp_servers/arxiv/: helpers.py  schema.py  server.py
notebooks/: draft.ipynb
prompts/: arxiv.txt
utils/: helper.py
workflow/: graph.py  state.py
