[project]
name = "science-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.122.0",
    "fuzzyfinder>=2.3.0",
    "httpx>=0.28.1",
    "langchain-core>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-supervisor>=0.0.31",
    "mcp[cli]>=1.22.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.4",
    "python-dateutil>=2.9.0.post0",
]
