[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "colorlog>=6.9.0",
    "fuzzyfinder>=2.3.0",
    "langchain-core>=0.3.76",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-supervisor>=0.0.29",
    "markitdown[all]>=0.1.3",
    "mcp[cli]>=1.14.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
